Leepe Experience will be added soon after...

--- a/about-me.html
+++ b/about-me.html
@@ -127,6 +127,22 @@
                     </div>
                 </div>
             </a>
+            <a class="card" href="exp-pages/1yr-leepe.html">
+                <div class="card-image"
+                    style="background-image: url(raw-data/img/exp/leepe.png); background-size: contain;"></div>
+                <div class="card-content">
+                    <div class="card-title">Leepe &mdash; Quezon City</div>
+                    <div class="card-snippet">
+                        <p><span class="bold">Role:</span> Software Programmer</p>
+                        <p><span class="bold">Short Description:</span>
+                            Supporting and Developing Software Systems.
+                        </p>
+                    </div>
+                    <div class="card-readmore">
+                        <p>January - December, 2023</p>
+                    </div>
+                </div>
+            </a>
         </section>
 
         <!-- Education Section -->
