--- a/exp-pages/1yr-leepe.html
+++ b/exp-pages/1yr-leepe.html
@@ -31,8 +31,8 @@
             <img class="icon" height="60px" src="../raw-data/img/icon.png" alt="Erwin Hadjirul">
         </a>
         <ul class="nav-links">
-            <li><a href="1yr-leepe.html">Leepe</a></li>
             <li><a href="1yr-pbts.html">PBTS</a></li>
+            <li><a href="1yr-leepe.html">Leepe</a></li>
         </ul>
     </nav>
 
@@ -42,20 +42,20 @@
 
     <main>
         <div class="exp-wrapper">
-            <a href="../raw-data/img/exp/pbts.png" target="_blank">
+            <a href="../raw-data/img/exp/leepe.png" target="_blank">
                 <div class="exp-cover"
-                    style="background-image: url('../raw-data/img/exp/pbts.png'); background-size: contain;">
+                    style="background-image: url('../raw-data/img/exp/leepe.png'); background-size: contain;">
                 </div>
             </a>
             <div>
-                <h2>Leepe IT Solutions</h2>
+                <h2>Leepe</h2>
                 <h5 class="text-center">The first company to hire me as Junior Programmer.</h5>
                 <h6 class="text-center">January &ndash; December, 2023</h6>
             </div>
 
             <div class="exp-box centerer">
-                <a href="../raw-data/img/exp/pbts.png" target="_blank">
-                    <img class="exp-img" src="../raw-data/img/exp/pbts.png">
+                <a href="#" target="_blank">
+                    <img class="exp-img" src="#">
                 </a>
                 <h2>Title</h2>
                 <p class="exp-para">
