--- a/exp-pages/1yr-pbts.html
+++ b/exp-pages/1yr-pbts.html
@@ -32,7 +32,7 @@
         </a>
         <ul class="nav-links">
             <li><a href="1yr-pbts.html">PBTS</a></li>
-            <!--<li><a href="1yr-leepe.html">Leepe</a></li>-->
+            <li><a href="1yr-leepe.html">Leepe</a></li>
         </ul>
     </nav>
 
