Adjusted the service section

--- a/services.html
+++ b/services.html
@@ -67,11 +67,6 @@
                     don't need to have College Degree to be qualified. <br><br>
                     - Technologies I use: C#, ASP.NET, HTML, CSS, JS, Bootstrap and SQL.
                 </p>
-                <div class="text-justice">
-                    <p>Sample Project:</p>
-                    <br>
-                    - <a class="improved-link" href="projects.html#calculator">Calculator Web Application</a>
-                </div>
                 <br>
                 <h3 class="text-white left ml-25 bold">Frontend Web Development</h3>
                 <p class="text-white text-justice">
@@ -79,8 +74,7 @@
                     - The computer tools mainly used to complete the Frontend of a website are HTML (A Markup Computer
                     Language),
                     CSS (A Designer Computer Language) and JavaScript or JS (A Programming Language made for Web
-                    Development). <br><br>
-                    - Technologies I use: HTML, CSS, JS and Bootstrap.
+                    Development).
                 </p>
                 <div class="text-justice">
                     <p>Sample Project:</p>
@@ -95,8 +89,7 @@
                     to make the website up and running and the database is for data storage. <br><br>
                     - The computer tools mainly used to complete the Backend of a Website are Programming Langugages
                     made for Web Development.
-                    Those are PHP, JavaScript, C# with ASP.NET and many more. <br><br>
-                    - Technologies I use: C#, ASP.NET and SQL.
+                    Those are PHP, JavaScript, C# with ASP.NET and many more.
                 </p>
                 <div class="text-justice">
                     <p>Sample Project:</p>
