--- a/about-me.html
+++ b/about-me.html
@@ -55,7 +55,7 @@
                     <span class="text-violet">C#</span> is my Native Programming Language
                 </h1>
                 <h1 class="text-white">
-                    I love Colors
+                    I love Colors in
                     <span class="text-red">R</span><span class="text-green">G</span><span class="text-blue">B</span>
                 </h1>
                 <h1 class="text-white">
@@ -67,7 +67,7 @@
                     <span class="text-red">Eagle</span>
                 </h1>
                 <h1 class="text-white">
-                    I am an Ordinary Fan of <span style="color: #ff0073;">K</span>Drama
+                    I am an Ordinary Fan of <span style="color: #ff0073;">K</span>Dramas
                 </h1>
             </div>
             <!-- Image of ME -->
@@ -76,8 +76,8 @@
             </div>
         </div>
         <p class="quote">
-            Computer Science Degree Holder that is passionate to Programming,
-            looking to transition into real-world Programming profession.
+            Computer Science Degree Holder who is passionate about programming is looking to transition into the
+            real-world programming profession.
         </p>
 
         <!-- Skills -->
@@ -118,8 +118,7 @@
                     <div class="card-snippet">
                         <p><span class="bold">Role:</span> Software Support/Programmer</p>
                         <p><span class="bold">Short Description:</span>
-                            Supporting and Deploying Software Systems.
-                            Also, helping Senior Developer to develop Systems.
+                            Supporting and deploying software systems also helping senior developers develop systems.
                         </p>
                     </div>
                     <div class="card-readmore">
@@ -135,7 +134,7 @@
                     <div class="card-snippet">
                         <p><span class="bold">Role:</span> Software Programmer</p>
                         <p><span class="bold">Short Description:</span>
-                            Supporting and Developing Software Systems.
+                            Supporting and developing software systems
                         </p>
                     </div>
                     <div class="card-readmore">
@@ -209,7 +208,7 @@
                     <div class="card-title">Erwin Hadjirul Portfolio Website</div>
                     <div class="card-snippet">
                         <p><span class="bold">Short Description:</span>
-                            The Logo of the website emphasizes RGB (Red, Green, Blue) and the name of the owner...
+                            The logo of the website emphasizes RGB (red, green, and blue) and the name of the owner...
                         </p>
                     </div>
                     <div class="card-readmore">2022</div>
@@ -223,8 +222,8 @@
                     <div class="card-title">Guess The Hidden Character Game</div>
                     <div class="card-snippet">
                         <p><span class="bold">Short Description:</span>
-                            When the user first fires up the app, it will show the title/logo of the app and prompt the
-                            user...
+                            When the user first fires up the app, it will show the title or logo of the app and prompt
+                            the user to enter his name...
                         </p>
                     </div>
                     <div class="card-readmore">2022</div>
@@ -238,8 +237,8 @@
                     <div class="card-title">Student Record Management</div>
                     <div class="card-snippet">
                         <p><span class="bold">Short Description:</span>
-                            The app starts directly with its logo name and menu stacked together, while the system
-                            prompting...
+                            The app starts directly with its logo, name, and menu stacked together, while the system
+                            prompts the user...
                         </p>
                     </div>
                     <div class="card-readmore">2022</div>
@@ -253,8 +252,8 @@
                     <div class="card-title">NumSys-C</div>
                     <div class="card-snippet">
                         <p><span class="bold">Short Description:</span>
-                            The app has the following features: Dark Mode; Offline, No Ads and Free; Easy to Understand
-                            and Use...
+                            The app has a logo (you can see that in the first list on the following app pictures), but
+                            it has no splash screen....
                         </p>
                     </div>
                     <div class="card-readmore">2022</div>
@@ -272,7 +271,7 @@
                     <div class="card-title">DICT Web Development Training Certificate of Participation</div>
                     <div class="card-snippet">
                         <p><span class="bold">Short Description:</span>
-                            It is a 2-day or approximately 16-hour awesome PHP Programming Language Training.
+                            It is a 2-day, or approximately 16-hour, awesome PHP programming language training.
                         </p>
                     </div>
                     <div class="card-readmore">Dec. 18, 2022</div>
@@ -290,6 +289,7 @@
             <p class="text-white text-center">Tausug</p>
             <p class="text-white text-center">Filipino</p>
             <p class="text-white text-center">English</p>
+            <br>
             <hr class="copyright-line">
         </section>
     </main>
