--- a/projects.html
+++ b/projects.html
@@ -49,32 +49,25 @@
                 <li><span class="bold bg-blue">Name:</span><br> Erwin Hadjirul Portfolio Website</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    - This is a website developed with full static files including HTML Files, CSS Files, Images (JPG,
-                    PNG) and Icons (SVG). <br>
-                    - The Logo of the website emphasizes RGB (Red, Green, Blue) and the name of the owner.
-                    The footer specifies the addresses, social medias and the `copyright owner` of the owner for some
-                    informational purposes.
-                    In the `Home` Section, the name and the picture of the owner of this Website are present. There is a
-                    button below the Name,
-                    written `Hire Me`, clicking it would redirect the control to Email App. At the back of the picture
-                    of owner of the website shows the primary
-                    Programming Language the owner uses in his Programming Career.
-                    In the `Services` Section showcases the services offered by the owner as a Programmer with proof of
-                    every service.
-                    In the `Projects` Section lists the Projects the owner have worked on including the project's
-                    metadata
-                    and pictures. But these are just few Projects the owner created just to showcase his ability to
-                    develop.
-                    In the `About Me` Section introduces the owner of the website. This section formalized like
-                    Resume/CV.
-                    On the Education and Experience Part, when a card is clicked, the control will redirect to the
-                    Education or Experience Sections, respectively
-                    with whole new
-                    different composition of some part of the website but same theme.
+                    - This is a website developed with full static files, including HTML files, CSS files, images (JPG,
+                    PNG), and icons (SVG). <br>
+                    - The logo of the website emphasizes RGB (red, green, and blue) and the name of the owner. The
+                    footer specifies the addresses, social media, and the `copyright owner` of the owner for some
+                    informational purposes. In the `Home` section, the name and picture of the owner of this website are
+                    present. There is a button below the name, written `Hire Me'; clicking it would redirect the control
+                    to the email app. The back of the picture of the owner of the website shows the primary programming
+                    language the owner uses in his programming career. The `Services` section showcases the services
+                    offered by the owner as a programmer, with proof of every service. The `Projects` section lists the
+                    projects the owner has worked on, including the project's metadata and pictures. But these are just
+                    a few projects the owner created just to showcase his ability to develop. The `About Me` section
+                    introduces the owner of the website. This section is formalized like a resume or CV. On the
+                    Education and Experience Part, when a card is clicked, the control will redirect to the Education or
+                    Experience Sections, respectively, with a whole new composition of some parts of the website but the
+                    same theme.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
-                        href="https://github.com/Erwin-Hadjirul/Portfolio">https://github.com/Erwin-Hadjirul/Portfolio</a>
+                        href="https://github.com/Erwin-Hadjirul/Portfolio">https://github.com/Erwin-Hadjirul/portfolio</a>
                 </li>
             </ul>
         </div>
@@ -110,22 +103,18 @@
                 <li><span class="bold bg-blue">Name:</span><br> Guess The Hidden Character Game</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    - This is a Console App developed using C# Programming Language. <br>
-                    - When the user first fires up the app, it will show the title/logo of the app and
-                    prompt the user to enter his name. After it has the user's name, it will welcome the user.
-                    Then, it will show the app menu which is 3: Start, Instructions and Quit, while prompting the user
-                    to choose from those as number from 1 to 3. When the user chooses number 1, it will start the game.
-                    First, it will show to the user 3
-                    characters with each name and attributes. Then, the screen will change and will show only 1
-                    character
-                    with full-packed attributes and name existed as blank, while prompting the user to guess the name of
-                    the character based on the attributes.
-                    When the user guesses wrong, his 3 game life will reduce, otherwise his score/points will increase
-                    by one. And the user
-                    can play the game so long as he wants. <br>
+                    - This is a console app developed using the C# programming language. <br>
+                    - When the user first fires up the app, it will show the title or logo of the app and prompt the
+                    user to enter his name. After it has the user's name, it will welcome the user. Then, it will show
+                    the app menu, which is 3: Start, Instructions, and Quit, while prompting the user to choose from
+                    those as numbers from 1 to 3. When the user chooses number 1, it will start the game. First, it will
+                    show the user three characters for each name and attribute. Then, the screen will change and show
+                    only 1 character with full-packed attributes, whose name is blank, while prompting the user to guess
+                    the name of the character based on the attributes. When the user guesses wrong, his three-game life
+                    will reduce; otherwise, his score or points will increase by one. And the user can play the game as
+                    long as he wants. <br>
                     Back to menu, when the user chooses number 2, it will show to the user the instructions for playing
-                    the app.
-                    And if the user chooses number 3, the app will thank the user and exit gracefully.
+                    the app. And if the user chooses number 3, the app will thank the user and exit gracefully.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
@@ -163,28 +152,24 @@
                 <li><span class="bold bg-blue">Name:</span><br> Student Record Management (CLI-based System)</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    - This is a Console App or CLI-based System (Command-line Interface -based System) developed using
-                    C# Programming Language. <br>
-                    - The app starts directly with its logo name and menu stacked together, while the system prompting
-                    the user to choose from menu.
-                    If the user wants to add a student record to the system, he needs to choose number 1. Else if the
-                    user wants to view all the records
-                    recorded in the system, he needs to choose number 2. Else if the user only wants to know if a
-                    certain record is recorded in the
-                    system, he needs to choose number 3. And the last number is for exit/stop of the system. <br>
-                    In the Add Section, the user first needs to choose the specific Student Course he wants to record or
-                    return back to menu.
-                    Then the user can enter the student record information. After clicking enter, the record is being
-                    recorded. The user can
-                    record student record again. <br>
-                    In the View Section, the user can view all the records recorded in the specific student course which
-                    was
-                    should be specified by the user upon entering the section. Then, the user can return back to menu.
+                    - This is a console app or CLI-based system (command-line interface-based system) developed using
+                    the C# programming language. <br>
+                    - The app starts directly with its logo, name, and menu stacked together, while the system prompts
+                    the user to choose from the menu. If the user wants to add a student record to the system, he needs
+                    to choose number 1. Otherwise, if the user wants to view all the records recorded in the system, he
+                    needs to choose number 2. Otherwise, if the user only wants to know if a certain record is recorded
+                    in the system, he needs to choose number 3. And the last number is for the exit or stop of the
+                    system. <br>
+                    In the Add Section, the user first needs to choose the specific student course he wants to record or
+                    return to the menu. Then the user can enter the student record information. After clicking enter,
+                    the record is being recorded. The user can record student records again. <br>
+                    In the View Section, the user can view all the records recorded in the specific student course,
+                    which should be specified by the user upon entering the section. Then, the user can return to the
+                    menu.
                     <br>
-                    In the Search Section, the user can enter the name of a student he wants to ensure if it is recorded
-                    in the system.
-                    If the student's name existed, the system will echo "Record Found!!!!", otherwise "Record Not
-                    Found!!!!"
+                    In the Search Section, the user can enter the name of a student he wants to ensure that it is
+                    recorded in the system. If the student's name exists, the system will echo "Record Found!";
+                    otherwise, "Record Not Found!"
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
@@ -219,19 +204,17 @@
                 <li><span class="bold bg-blue">Name:</span><br> NumSys-C</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    - This is an Android-based Mobile App developed using C# and `Xamarin Forms` Framework of .NET for
-                    building Cross-platform Mobile Application.
-                    It is now then updated to .NET MAUI (Multi-platform Application User Interface) Framework. <br>
-                    - The app has a logo (You can see that at the first list on the following App Pictures) but it has
-                    no Splash Screen, because this app
-                    was created when its developer isn't that great in App Development, he is just been forced to
-                    develop for School Thesis Purposes.
-                    The app has the following features: Dark Mode; Offline, No Ads and Free; Easy to Understand and Use;
-                    Educational Section like Read Sections and Quiz Sections; Game; and Converter Support for
-                    different Number Systems and Text as well. There is an About Section at the end of the menu,
-                    entering it will show the user
-                    the App's Purposes, who are the developers, the institutions where it is developed, and some of the
-                    App Features.
+                    - This is an Android-based mobile app developed using C# and the `Xamarin Forms` Framework of.NET
+                    for building cross-platform mobile applications. It is now updated to the.NET MAUI (Multi-platform
+                    Application User Interface) Framework. <br>
+                    - The app has a logo (you can see that in the first list on the following app pictures), but it has
+                    no splash screen because this app was created when its developer wasn't that great at app
+                    development; he was just forced to develop it for school thesis purposes. The app has the following
+                    features: dark mode; offline, no ads, and free; easy to understand and use; educational sections
+                    like read sections and quiz sections; games; and converter support for different number systems and
+                    texts as well. There is an About Section at the end of the menu; entering it will show the user the
+                    app's purposes, who the developers are, the institutions where it was developed, and some of the
+                    app's features.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> Not Available</li>
