--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
             <div class="lower-content">
                 <h3 class="text-white text-center bold">Web Developer</h3>
                 <h3 class="text-white text-center"><span class="bold">Technology:</span> C#, ASP.NET, HTML, CSS, JS,
-                    Bootstrap and SQL</h3>
+                    JQuery, Bootstrap and SQL</h3>
                 <div class="boundary mr-25">2022 &ndash; Present</div>
             </div>
             <div class="lower-content">
@@ -58,23 +58,20 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Web Development</h3>
                 <p class="text-white text-justice">
-                    - The process of developing and maintaining websites. It is the work behind the looking great, fast
-                    and well performance website with a faultless user experience. <br><br>
-                    - Web Development Skills are in high demand worldwide and well paid too. Although learning how to
-                    code is not easy,
-                    however acquiring this knowledge would be worth it. Among many great advantages of having this
-                    knowledge is you
-                    don't need to have College Degree to be qualified. <br><br>
-                    - Technologies I use: C#, ASP.NET, HTML, CSS, JS, Bootstrap and SQL.
+                    - The process of developing and maintaining websites. It is the work behind a great-looking, fast,
+                    and well-performing website with a faultless user experience. <br><br>
+                    - Web development skills are in high demand worldwide and well paid, too. Although learning how to
+                    code is not easy, acquiring this knowledge would be worth it. Among the many great advantages of
+                    having this knowledge is that you don't need to have a college degree to be qualified. <br><br>
+                    - Technologies I use: C#, ASP.NET, HTML, CSS, JS, JQuery, Bootstrap and SQL
                 </p>
                 <br>
                 <h3 class="text-white left ml-25 bold">Frontend Web Development</h3>
                 <p class="text-white text-justice">
-                    - The process of developing and designing the visual aspect of a website. <br><br>
-                    - The computer tools mainly used to complete the Frontend of a website are HTML (A Markup Computer
-                    Language),
-                    CSS (A Designer Computer Language) and JavaScript or JS (A Programming Language made for Web
-                    Development).
+                    - The process of developing and designing the visual aspect of a website <br><br>
+                    - The computer tools mainly used to complete the frontend of a website are HTML (a markup computer
+                    language), CSS (a designer computer language), and JavaScript or JS (a programming language made for
+                    web development).
                 </p>
                 <div class="text-justice">
                     <p>Sample Project:</p>
@@ -84,12 +81,11 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Backend Web Development</h3>
                 <p class="text-white text-justice">
-                    - The process of developing and ensuring the integrity of the server, application and
-                    database of the website smoothly. The server is for hosting the website, the application is
-                    to make the website up and running and the database is for data storage. <br><br>
-                    - The computer tools mainly used to complete the Backend of a Website are Programming Langugages
-                    made for Web Development.
-                    Those are PHP, JavaScript, C# with ASP.NET and many more.
+                    - The process of developing and ensuring the integrity of the server, application, and database of
+                    the website runs smoothly. The server is for hosting the website, the application is to make the
+                    website up and running, and the database is for data storage. <br><br>
+                    - The computer tools mainly used to complete the backend of a website are programming languages made
+                    for web development. Those are PHP, JavaScript, C# with ASP.NET, and many more.
                 </p>
                 <div class="text-justice">
                     <p>Sample Project:</p>
@@ -102,16 +98,14 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Website</h3>
                 <p class="text-white text-justice">
-                    - Collection of related web pages that contains image, text, audio, video, etc.
+                    - Collection of related web pages that contain images, text, audio, video, etc.
                 </p>
                 <br>
                 <h3 class="text-white left ml-25 bold">Web Application</h3>
                 <p class="text-white text-justice">
-                    - A piece of application software that can be accessed by browser in the internet. It is the
-                    combination of
-                    server-side and client-side scripts to present data and a server to manage the request from the
-                    users and the
-                    response to the users.
+                    - A piece of application software that can be accessed by a browser on the internet. It is the
+                    combination of server-side and client-side scripts to present data and a server to manage the
+                    request from the users and the response to the users.
                 </p>
             </div>
         </section>
@@ -130,13 +124,13 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Desktop Application Development</h3>
                 <p class="text-white text-justice">
-                    - An application software that are built for computers.
-                    Some are native applications which are written for specific Operating System of Computers,
-                    and others are cross-platform which can be ran in different Operating Systems. <br><br>
-                    - It does not require any internet connection to run, and they must be downloaded to your
-                    computer in order to run. Also, it can access some of the computers internal system software.
+                    - application software that is built for computers. Some are native applications that are written
+                    for specific operating systems of computers, and others are cross-platform applications that can be
+                    run on different operating systems. <br><br>
+                    - It does not require any internet connection to run, and it must be downloaded to your computer in
+                    order to run. Also, it can access some of the computer's internal system software.
                     <br><br>
-                    - Technologies I use: C# and SQL.
+                    - Technologies I use: C# and SQL
                 </p>
                 <div class="text-justice">
                     <p>Sample Project:</p>
@@ -147,18 +141,15 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Console Application Development</h3>
                 <p class="text-white text-justice">
-                    - A Computer Program or Application designed to be used via Computer Command-line Interface (CLI),
-                    such as
-                    text terminal and command prompt. Some are native applications which are
-                    written for specific Operating System of Computers, and others are cross-platform which can be ran
-                    in different Operating Systems. <br><br>
-                    - Every beginner developer or programmer is required to start learning Programming in this field,
-                    because this field is
-                    easy to grasp and all of the programming concepts can be applied here. And also, you can focus on
-                    learning the programming language's
-                    fundamentals, data structures and algorithms and not be distracted by other User Interface
-                    knowledges. <br><br>
-                    - Technology I use: C#.
+                    - A computer program or application designed to be used via a computer command-line interface (CLI),
+                    such as a text terminal or command prompt, Some are native applications that are written for
+                    specific operating systems of computers, and others are cross-platform applications that can be run
+                    on different operating systems. <br><br>
+                    - Every beginner developer or programmer is required to start learning programming in this field
+                    because this field is easy to grasp and all of the programming concepts can be applied here. And
+                    also, you can focus on learning the programming language's fundamentals, data structures, and
+                    algorithms and not be distracted by other user interface knowledge. <br><br>
+                    - Technology I use: C#
                 </p>
                 <div class="text-justice">
                     <p>Sample Project:</p>
@@ -170,20 +161,20 @@
                 <br>
                 <h2 class="text-white left ml-20 bold">Additional Information:</h3>
                     <br>
-                    <h3 class="text-white left ml-25 bold">User Interface</h3>
+                    <h3 class="text-white left ml-25 bold">User Interface (UI)</h3>
                     <p class="text-white text-justice">
-                        - The place or point where human or users can interact and communicate with computer.
+                        - The place or point where humans or users can interact and communicate with computers
                     </p>
                     <br>
-                    <h3 class="text-white left ml-25 bold">Command-line Interface</h3>
+                    <h3 class="text-white left ml-25 bold">Command-line Interface (CLI)</h3>
                     <p class="text-white text-justice">
-                        - User interface where commands or texts are the only available users used to communicate with
-                        computers.
+                        - User interface, where commands or texts are the only available tools users use to communicate
+                        with computers.
                     </p>
                     <br>
-                    <h3 class="text-white left ml-25 bold">Graphical User Interface</h3>
+                    <h3 class="text-white left ml-25 bold">Graphical User Interface (GUI)</h3>
                     <p class="text-white text-justice">
-                        - User interface where users communicate with computers in a graphical and visual way.
+                        - User interface, where users communicate with computers in a graphical and visual way.
                     </p>
             </div>
         </section>
